Switch backup archives from tar.xz to JDK zip